# livelogic

./: .gitignore  Dockerfile  README.md  grok_voice_agent_api.py  pyproject.toml  requirements.txt  start.sh
agent/: livekit_agent.py
plans/: system_model.md
reasoner/: __init__.py
reasoner/app/: clingo_reasoner.py  dspy_pipeline.py  main.py  models.py  orchestrator.py
reasoner/asp/: security.lp  system_model.lp
shared/: __init__.py  fact_timeline.py  rule_registry.py
tests/: test_clingo.py  test_fact_timeline.py  test_rule_registry.py
