[project]
name = "grok-voice-agent"
version = "0.1.0"
description = "Grok Voice Agent API example with LiveKit"
requires-python = ">=3.10"
dependencies = [
    "watchfiles>=1.1.1",
    "python-dotenv",
    "livekit-agents",
    "livekit-plugins-xai",
    "livekit-plugins-silero",
]

[tool.uv]
dev-dependencies = []
